# panderaext

./: README.md  pyproject.toml
src/panderaext/: checks.py  schema_helper.py  serializable_check_types.py
tests/panderaext_test/: test_get_schema_columns.py
